# releasr

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  db.sqlite
integration/: Releasr.postman_collection.json
scripts/: build-docker.sh
src/: config.rs  errors.rs  main.rs
src/models/: custom_version.rs  environment.rs  mod.rs  note.rs
src/routes/: environments.rs  mod.rs  notes.rs
