[package]
name = "releasr"
version = "0.1.0"
edition = "2018"
authors = ["Krakaw"]


[dependencies]
actix-web = "3"
serde = "1"
serde_json = "1"
semver = {version= "1", features = ["serde"] }
chrono = {version = "0.4.19", features = ["serde"]}
rusqlite = { version = "0.26.3", features = ["serde_json", "chrono"] }
thiserror = "1.0.30"
anyhow = "1.0.52"
dotenv = "0.15.0"
